[tool.poetry]
name = "bybit-history"
version = "0.1.2"
description = "A tool to download historical trading data from Bybit public API."
authors = ["Eugen Soloviov <suenot@gmail.com>"]
readme = "README.md"
packages = [
    {include = "bybit_history"},
    {include = "increment_version"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
start = "bybit_history.bybit_data_downloader:main"
bump = "increment_version:main"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 